index.html > structure done

--- a/index.html
+++ b/index.html
@@ -24,13 +24,78 @@
 
     </head>
 
+
+
     <body>
 
+      <!-- HEADER @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
+      <header>
 
-    
+      </header>
+
+      <!-- MAIN  @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
+      <main>
+        <!-- CAROUSEL  @@@///@@@@@@@@//@@@@@//@@@@/@-->
+
+        <section>
+          <div></div>
+        </section>
+
+        <!-- ARTICLES  @@@///@@@@@@@@//@@@@@//@@@@/@-->
+
+        <section>
+
+          <h2>Pésentation</h2>
+
+          <div>
+            <!-- ARTICLE 1 -->
+            <article>
+
+            </article>
+
+            <!-- ARTICLE 3 -->
+
+            <article>
+
+            </article>
+
+            <!-- ARTICLE 2 -->
+
+            <article>
+
+            </article>
+
+          </div><!-- fin articles -->
+
+        </section>
+      </main>
 
 
+      <!-- FOOTER @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
 
+      <footer>
+
+        <h2>Nos Super Coach</h2>
+
+        <div>
+          <firgure><img src="" alt="coach"></firgure>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat.</p>
+        </div>
+        <div>
+          <firgure><img src="" alt="coach"></firgure>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda.</p>
+        </div>
+        <div>
+          <firgure><img src="" alt="coach"></firgure>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque!</p>
+        </div>
+        <div>
+          <firgure><img src="" alt="coach"></firgure>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse?</p>
+        </div>
+
+
+      </footer>
 
 
       <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
