--- a/index.html
+++ b/index.html
@@ -29,16 +29,111 @@
     <body>
 
       <!-- HEADER @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
-      <header>
+      <header class="container">
 
+        <!-- Phone -->
+        <div class="row hidden-sm-up">
+
+          <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Brand -->
+            <a class="navbar-brand" href="#">Logo</a>
+
+            <!-- Links -->
+            <div class="collapse navbar-collapse" id="nav-content">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link 1</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link 2</a>
+                </li>
+              </ul>
+            </div>
+
+          </nav>
+
+        </div>
+
+        <!-- DESKTOP -->
+        <div class="row hidden-xs-down">
+          <nav class="navbar navbar-toggleable-xl navbar-light bg-faded">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Brand -->
+            <a class="navbar-brand" href="#">Logo</a>
+
+            <!-- Links -->
+            <div class="collapse navbar-collapse" id="nav-content">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link 1</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link 2</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link 3</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
       </header>
 
       <!-- MAIN  @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
-      <main>
+      <main class="container-fluid">
         <!-- CAROUSEL  @@@///@@@@@@@@//@@@@@//@@@@/@-->
 
-        <section>
-          <div></div>
+        <section class="container">
+          <div class="row">
+
+            <div id="myCarousel" class="carousel slide bg-inverse" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                  <img class="d-block img-fluid ml-auto mr-auto" src="img/desktop/car1.jpg" alt="First slide">
+                    <div class="carousel-caption">
+                      <h3>A plusieurs</h3>
+                      <p>Entre amis ou en famille</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid ml-auto mr-auto" src="img/desktop/car2.jpg" alt="Second slide">
+                    <div class="carousel-caption">
+                      <h3>Night session</h3>
+                      <p>Programme de nuit pour tous</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid ml-auto mr-auto" src="img/desktop/car3.jpg" alt="Third slide">
+                    <div class="carousel-caption">
+                      <h3>Matériel</h3>
+                      <p>Aucun matériel à avoir, on s'occupe de tout</p>
+                    </div>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+
+          </div>
         </section>
 
         <!-- ARTICLES  @@@///@@@@@@@@//@@@@@//@@@@/@-->
@@ -48,22 +143,52 @@
           <h2>Pésentation</h2>
 
           <div>
-            <!-- ARTICLE 1 -->
-            <article>
+            <div class="container">
+                    <div class="row">
 
-            </article>
+                      <!-- ARTICLE 1 -->
+                        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                            <div class="card">
+                                <img class="card-img-top" src="img/desktop/art1.jpg">
+                                <div class="card-block">
+                                    <h5 class="text-bold">Tawshif Ahsan Khan</h5>
+                                </div>
+                            </div>
+                        </div>
 
-            <!-- ARTICLE 3 -->
+                        <!-- ARTICLE 2 -->
+                        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                            <div class="card">
+                                <img class="card-img-top" src="img/desktop/art2.jpg">
+                                <div class="card-block">
+                                    <h4 class="card-title">Tawshif Ahsan Khan</h4>
+                                    <div class="meta">
+                                        <a href="#">Friends</a>
+                                    </div>
+                                    <div class="card-text">
+                                        Tawshif is a web designer living in Bangladesh.
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <span class="float-right">Joined in 2013</span>
+                                    <span><i class=""></i>75 Friends</span>
+                                </div>
+                            </div>
+                        </div>
 
-            <article>
+                        <!-- ARTICLE 3 -->
+                        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                            <div class="card">
+                                <img class="card-img-top" src="img/desktop/art2.jpg">
+                                <p class="card-block">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit quisquam veniam excepturi temporibus inventore corporis dicta sit culp!
+                                </p>
+                            </div>
+                        </div>
 
-            </article>
+                    </div>
 
-            <!-- ARTICLE 2 -->
-
-            <article>
-
-            </article>
+            </div>
 
           </div><!-- fin articles -->
 
@@ -73,26 +198,38 @@
 
       <!-- FOOTER @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
 
-      <footer>
+      <footer class="container">
 
         <h2>Nos Super Coach</h2>
 
-        <div>
-          <firgure><img src="" alt="coach"></firgure>
+        <div class="row">
+          <firgure class="col-lg-3">
+            <img src="img/coach1.jpg" alt="coach">
+          </firgure>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat.</p>
         </div>
+
         <div>
-          <firgure><img src="" alt="coach"></firgure>
+          <firgure class="col-lg-3">
+            <img src="img/coach2.jpg" alt="coach">
+          </firgure>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda.</p>
         </div>
+
         <div>
-          <firgure><img src="" alt="coach"></firgure>
+          <firgure class="col-lg-3">
+            <img src="img/coach3.jpg" alt="coach">
+          </firgure>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque!</p>
         </div>
+
         <div>
-          <firgure><img src="" alt="coach"></firgure>
+          <firgure class="col-lg-3">
+            <img src="img/coach4.jpg" alt="coach">
+          </firgure>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse?</p>
         </div>
+
 
 
       </footer>
