--- a/index.html
+++ b/index.html
@@ -12,15 +12,24 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <!-- bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
+        <!-- jQuery library -->
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+
+        <!-- Tether -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+
+        <!-- Bootstrap 4 Alpha JS -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
         <!-- CSS -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/style.css">
-
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <!-- bootstrap -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
 
@@ -29,28 +38,31 @@
     <body>
 
       <!-- HEADER @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
-      <header class="container">
+      <header class="container" id="header">
 
         <!-- Phone -->
-        <div class="row hidden-sm-up">
+        <div class="row hidden-sm-up phone">
 
-          <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+          <nav class="navbar navbar-toggleable-md navbar-light bg-faded col-12">
 
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right col-2" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand col-10" href="#">Fitness U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse" id="nav-content">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link 1</a>
+                  <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link 2</a>
+                  <a class="nav-link" href="#">Tarif</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
                 </li>
               </ul>
             </div>
@@ -60,26 +72,26 @@
         </div>
 
         <!-- DESKTOP -->
-        <div class="row hidden-xs-down">
-          <nav class="navbar navbar-toggleable-xl navbar-light bg-faded">
+        <div class="row hidden-xs-down desktop">
+          <nav class="navbar navbar-toggleable-xl navbar-light bg-faded col-md-12">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand col-md-8" href="#">Fitness U</a>
 
             <!-- Links -->
-            <div class="collapse navbar-collapse" id="nav-content">
+            <div class="collapse navbar-collapse col-md-3 nav" id="nav-content">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link 1</a>
+                  <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link 2</a>
+                  <a class="nav-link" href="#">Tarif</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link 3</a>
+                  <a class="nav-link" href="#">Contact</a>
                 </li>
               </ul>
             </div>
@@ -88,7 +100,7 @@
       </header>
 
       <!-- MAIN  @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
-      <main class="container-fluid">
+      <main class="container-fluid" id="main">
         <!-- CAROUSEL  @@@///@@@@@@@@//@@@@@//@@@@/@-->
 
         <section class="container">
@@ -198,33 +210,33 @@
 
       <!-- FOOTER @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
 
-      <footer class="container">
+      <footer class="container" id="footer">
 
         <h2>Nos Super Coach</h2>
 
         <div class="row">
-          <firgure class="col-lg-3">
+          <firgure class="col-lg-3 coah">
             <img src="img/coach1.jpg" alt="coach">
           </firgure>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat.</p>
         </div>
 
         <div>
-          <firgure class="col-lg-3">
+          <firgure class="col-lg-3 coah">
             <img src="img/coach2.jpg" alt="coach">
           </firgure>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda.</p>
         </div>
 
         <div>
-          <firgure class="col-lg-3">
+          <firgure class="col-lg-3 coah">
             <img src="img/coach3.jpg" alt="coach">
           </firgure>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque!</p>
         </div>
 
         <div>
-          <firgure class="col-lg-3">
+          <firgure class="col-lg-3 coah">
             <img src="img/coach4.jpg" alt="coach">
           </firgure>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse?</p>
@@ -240,14 +252,6 @@
       <script src="js/plugins.js"></script>
       <script src="js/main.js"></script>
 
-      <!-- jQuery library -->
-      <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-
-      <!-- Tether -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-
-      <!-- Bootstrap 4 Alpha JS -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
       <script>
