homepage >main >done

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Tarif</a>
+                  <a class="nav-link" href="#">Tarifs</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
@@ -88,7 +88,7 @@
                   <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Tarif</a>
+                  <a class="nav-link" href="#">Tarifs</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
@@ -106,7 +106,7 @@
         <section class="container">
           <div class="row">
 
-            <div id="myCarousel" class="carousel slide bg-inverse" data-ride="carousel">
+            <div id="myCarousel" class="carousel slide bg-inverse push-md-2 col-md-8" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -150,7 +150,7 @@
 
         <!-- ARTICLES  @@@///@@@@@@@@//@@@@@//@@@@/@-->
 
-        <section>
+        <section class="presentation">
 
           <h2>Pésentation</h2>
 
@@ -158,43 +158,61 @@
             <div class="container">
                     <div class="row">
 
-                      <!-- ARTICLE 1 -->
-                        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                        <!-- ARTICLE 1 -->
+                        <div class="col-md-4">
                             <div class="card">
                                 <img class="card-img-top" src="img/desktop/art1.jpg">
                                 <div class="card-block">
-                                    <h5 class="text-bold">Tawshif Ahsan Khan</h5>
+                                    <h4 class="card-title">STEP 1</h4>
+                                    <div class="meta">
+                                        <a href="#"></a>
+                                    </div>
+                                    <div class="card-text">
+                                        Prenez un cours <strong>particulier</strong> avec un de nos coach exepert
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <span><i class=""></i>Choisir sont <strong>coach</strong></span>
                                 </div>
                             </div>
                         </div>
 
+
                         <!-- ARTICLE 2 -->
-                        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                        <div class="col-md-4">
                             <div class="card">
                                 <img class="card-img-top" src="img/desktop/art2.jpg">
                                 <div class="card-block">
-                                    <h4 class="card-title">Tawshif Ahsan Khan</h4>
+                                    <h4 class="card-title">STEP 2</h4>
                                     <div class="meta">
-                                        <a href="#">Friends</a>
+                                        <a href="#"></a>
                                     </div>
                                     <div class="card-text">
-                                        Tawshif is a web designer living in Bangladesh.
+                                        Travaillez à <strong>votre</strong> rythme selon <strong>vos</strong> disponibilités
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <span class="float-right">Joined in 2013</span>
-                                    <span><i class=""></i>75 Friends</span>
+                                    <span><i class=""></i>Atteindre sont <strong>objectif</strong></span>
                                 </div>
                             </div>
                         </div>
 
                         <!-- ARTICLE 3 -->
-                        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                        <div class="col-md-4">
                             <div class="card">
-                                <img class="card-img-top" src="img/desktop/art2.jpg">
-                                <p class="card-block">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit quisquam veniam excepturi temporibus inventore corporis dicta sit culp!
-                                </p>
+                                <img class="card-img-top" src="img/desktop/art3.jpg">
+                                <div class="card-block">
+                                    <h4 class="card-title">STEP 3</h4>
+                                    <div class="meta">
+                                        <a href="#"></a>
+                                    </div>
+                                    <div class="card-text">
+                                        Maintenez votre <strong>forme</strong> seul avec les cours reçus
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <span><i class=""></i>Maintenir la <strong>forme</strong></span>
+                                </div>
                             </div>
                         </div>
 
