--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <h2>Pésentation</h2>
 
           <div>
-            <div class="container">
+            <div class="container-fluid">
                     <div class="row">
 
                         <!-- ARTICLE 1 -->
@@ -207,7 +207,7 @@
                                         <a href="#"></a>
                                     </div>
                                     <div class="card-text">
-                                        Maintenez votre <strong>forme</strong> seul avec les cours reçus
+                                        Maintenez votre <strong>forme</strong> seul avec les cours reçus avec nous
                                     </div>
                                 </div>
                                 <div class="card-footer">
@@ -228,39 +228,129 @@
 
       <!-- FOOTER @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
 
-      <footer class="container" id="footer">
+      <footer class="container-fluid" id="footer">
 
         <h2>Nos Super Coach</h2>
 
         <div class="row">
-          <firgure class="col-lg-3 coah">
-            <img src="img/coach1.jpg" alt="coach">
-          </firgure>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat.</p>
+
+          <!-- COACH 1 -->
+          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+              <div class="card">
+                  <img class="card-img-top" src="img/coach1.jpg">
+                  <div class="card-block">
+                      <h4 class="card-title mt-3">Alexandra</h4>
+                      <div class="meta">
+                          <a>24ans</a>
+                      </div>
+                      <div class="card-text">
+                        Développement <br>musculaire
+                      </div>
+                  </div>
+                  <div class="card-footer">
+                      <small>Min 2h/semaine</small>
+                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                  </div>
+              </div>
+          </div>
+
+
+          <!-- COACH 2 -->
+          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+              <div class="card">
+                  <img class="card-img-top" src="img/coach2.jpg">
+                  <div class="card-block">
+                      <h4 class="card-title mt-3">Roberto</h4>
+                      <div class="meta">
+                          <a>29ans</a>
+                      </div>
+                      <div class="card-text">
+                          Body bar <br> Body scult
+                      </div>
+                  </div>
+                  <div class="card-footer">
+                      <small>Min 2h/semaine</small>
+                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                  </div>
+              </div>
+          </div>
+
+
+
+          <!-- COACH 3 -->
+          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+              <div class="card">
+                  <img class="card-img-top" src="img/coach3.jpg">
+                  <div class="card-block">
+                      <h4 class="card-title mt-3">Ahsan</h4>
+                      <div class="meta">
+                          <a>26ans</a>
+                      </div>
+                      <div class="card-text">
+                          Work out <br> City training
+                      </div>
+                  </div>
+                  <div class="card-footer">
+                      <small>Min 1h/semaine</small>
+                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                  </div>
+              </div>
+          </div>
+
+
+
+          <!-- COACH 4 -->
+          <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+              <div class="card">
+                  <img class="card-img-top" src="img/coach4.jpg">
+                  <div class="card-block">
+                      <h4 class="card-title mt-3">Tawshif</h4>
+                      <div class="meta">
+                          <a>22ans</a>
+                      </div>
+                      <div class="card-text">
+                          Expert en <br>amincissement
+                      </div>
+                  </div>
+                  <div class="card-footer">
+                      <small>Min 1h30/semaine</small>
+                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                  </div>
+              </div>
+          </div>
+
+
+<!--
+          <div class="col-md-3 cardcoach">
+            <firgure class=" coach">
+              <img src="img/coach1.jpg" alt="coach">
+            </firgure>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat.</p>
+          </div>
+
+          <div class="col-md-3 cardcoach">
+            <firgure class=" coach">
+              <img src="img/coach2.jpg" alt="coach">
+            </firgure>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda.</p>
+          </div>
+
+          <div class="col-md-3 cardcoach">
+            <firgure class=" coach">
+              <img src="img/coach3.jpg" alt="coach">
+            </firgure>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque!</p>
+          </div>
+
+          <div class="col-md-3 cardcoach">
+            <firgure class=" coach">
+              <img src="img/coach4.jpg" alt="coach">
+            </firgure>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse?</p>
+          </div>
         </div>
 
-        <div>
-          <firgure class="col-lg-3 coah">
-            <img src="img/coach2.jpg" alt="coach">
-          </firgure>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda.</p>
-        </div>
-
-        <div>
-          <firgure class="col-lg-3 coah">
-            <img src="img/coach3.jpg" alt="coach">
-          </firgure>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque!</p>
-        </div>
-
-        <div>
-          <firgure class="col-lg-3 coah">
-            <img src="img/coach4.jpg" alt="coach">
-          </firgure>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse?</p>
-        </div>
-
-
+ -->
 
       </footer>
 
