tarif.html >tarif > done

--- a/pages/tarif.html
+++ b/pages/tarif.html
@@ -109,6 +109,102 @@
           <h2>Tarifs</h2>
 
           <div>
+            <div class="container">
+            	<div class="row">
+        				<div class="col-md-3">
+        						<div class="panel panel-danger">
+        								<div class="panel-heading">
+        										<h3 class="text-center">Petite formule</h3>
+        										<p class="text-center"> Debutant</p>
+        								</div>
+        								<div class="panel-body text-center">
+        										<p class="lead" style="font-size:30px"><strong>20€/mois</strong></p>
+        								</div>
+        								<ul class="list-group list-group-flush text-center">
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-calendar"></span> Séance de 30min
+        										</li>
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-envelope"></span>2 jours par semaines
+        										</li>
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-heart"></span>Alimentation <br>non-accompagné
+        										</li>
+        								</ul>
+        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">ACHETER</a> </div>
+        						</div>
+        				</div>
+        				<div class="col-md-3">
+        						<div class="panel panel-info">
+        								<div class="panel-heading">
+        										<h3 class="text-center">Moyenne formule</h3>
+        										<p class="text-center"> Amateur</p>
+        								</div>
+        								<div class="panel-body text-center">
+        										<p class="lead" style="font-size:30px"><strong>35€/mois</strong></p>
+        								</div>
+        								<ul class="list-group list-group-flush text-center">
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-calendar"></span> Séance de 1h
+        										</li>
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-envelope"></span>3 jours par semaines
+        										</li>
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-heart"></span>Alimentation <br> non-accompagné
+        										</li>
+        								</ul>
+        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">ACHETER</a> </div>
+        						</div>
+        				</div>
+        				<div class="col-md-3">
+        						<div class="panel panel-success">
+        								<div class="panel-heading">
+        										<h3 class="text-center">Grande formule</h3>
+        										<p class="text-center"> Avancé</p>
+        								</div>
+        								<div class="panel-body text-center">
+        										<p class="lead" style="font-size:30px"><strong>50€/mois</strong></p>
+        								</div>
+        								<ul class="list-group list-group-flush text-center">
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-calendar"></span> Séance de 1h30
+        										</li>
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-envelope"></span>4 jours par semaines
+        										</li>
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-heart"></span>Alimentation <br>accompagné
+        										</li>
+        								</ul>
+        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">ACHETER</a> </div>
+        						</div>
+        				</div>
+        				<div class="col-md-3">
+        						<div class="panel panel-warning">
+        								<div class="panel-heading">
+        										<h3 class="text-center">Extrat formule</h3>
+        										<p class="text-center"> Explosif</p>
+        								</div>
+        								<div class="panel-body text-center">
+        										<p class="lead" style="font-size:30px"><strong>90€/mois</strong></p>
+        								</div>
+        								<ul class="list-group list-group-flush text-center">
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-calendar"></span> Séance de 2h30
+        										</li>
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-envelope"></span>6 jours par semaines
+        										</li>
+        										<li class="list-group-item">
+        												<span class="glyphicon glyphicon-heart"></span>Alimentation <br> accompagné
+        										</li>
+        								</ul>
+        								<div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">ACHETER</a> </div>
+        						</div>
+        				</div>
+        		  </div>
+            </div>
 
           </div>
 
@@ -117,14 +213,14 @@
 
 
         <!-- Agenda  @@@///@@@@@@@@//@@@@@//@@@@/@-->
-        <section>
+        <section class="container">
 
           <h2>Agenda</h2>
 
-          <div>
-            
-          </div>
+          <div class="row">
+            <!-- End Column -->
 
+          </div>
         </section>
 
       </main>
