index.html>add P

--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
         <section class="presentation">
 
           <h2>Pésentation</h2>
+          <blockquote class="blockquote">
+            <p>
+            Besoin d'aide pour atteindre vos objectifs ? Offrez-vous les services de Fitness & U, un coach sportif professionnel qui propose ses services en salle ou à domicile proche de Lille.<br>                                                            
+            Intervenant aussi bien sur le plan physique que mental, les coach sportif à domicile qualifié de Fitness & U peuvent également donner d'excellents conseils nutritionnels. Il est en mesure de vous aider à perdre du poids et à tonifier vos muscles.
+            </p>
+          </blockquote>
 
           <div>
             <div class="container-fluid">
