--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Fitness & U</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- icon -->
@@ -50,7 +50,7 @@
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-10" href="#">Fitness U</a>
+            <a class="navbar-brand col-10" href="#">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse" id="nav-content">
@@ -79,7 +79,7 @@
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-md-8" href="#">Fitness U</a>
+            <a class="navbar-brand col-md-8" href="#">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse col-md-3 nav" id="nav-content">
@@ -214,23 +214,12 @@
           <h2>Où sommes nous?</h2>
             <div class="row">
 
-              <iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2528.45292102593!2d3.189737150990074!3d50.67441737940634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3287cf91e104f%3A0xa6ae6585f5725be4!2sA.D.E.P.!5e0!3m2!1sfr!2sfr!4v1495094118165" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2528.45292102593!2d3.189737150990074!3d50.67441737940634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3287cf91e104f%3A0xa6ae6585f5725be4!2sA.D.E.P.!5e0!3m2!1sfr!2sfr!4v1495094118165" width="800" height="400" style="border:0" allowfullscreen></iframe>
             </div>
 
         </section>
 
       </main>
-
-
-
-
-
-
-
-
-
-
-
 
 
       <!-- FOOTER @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
@@ -244,7 +233,7 @@
           <!-- COACH 1 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="../img/coach1.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach1.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Alexandra</h4>
                       <div class="meta">
@@ -255,8 +244,8 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 2h/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                      <small>Voir les disponibilités</small>
+                      <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
                   </div>
               </div>
           </div>
@@ -265,7 +254,7 @@
           <!-- COACH 2 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="../img/coach2.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach2.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Roberto</h4>
                       <div class="meta">
@@ -276,8 +265,8 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 2h/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <small>Voir les disponibilités</small>
                   </div>
               </div>
           </div>
@@ -287,7 +276,7 @@
           <!-- COACH 3 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="../img/coach3.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach3.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Ahsan</h4>
                       <div class="meta">
@@ -298,8 +287,8 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 1h/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <small>Voir les disponibilités</small>
                   </div>
               </div>
           </div>
@@ -309,23 +298,24 @@
           <!-- COACH 4 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="../img/coach4.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach4.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Tawshif</h4>
                       <div class="meta">
-                          <a>22ans</a>
+                          <a>32ans</a>
                       </div>
                       <div class="card-text">
                           Expert en <br>amincissement
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 1h30/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <small>Voir les disponibilités</small>
                   </div>
               </div>
           </div>
 
+        </div>
 
       </footer>
 
