--- a/pages/tarif.html
+++ b/pages/tarif.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Fitness & U</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- icon -->
@@ -50,7 +50,7 @@
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-10" href="#">Fitness U</a>
+            <a class="navbar-brand col-10" href="#">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse" id="nav-content">
@@ -79,7 +79,7 @@
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-md-8" href="#">Fitness U</a>
+            <a class="navbar-brand col-md-8" href="#">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse col-md-3 nav" id="nav-content">
@@ -227,16 +227,16 @@
                             <table class="fc-header" style="width:100%">
                                 <tbody>
                                     <tr>
-                                        <td class="fc-header-center"> <span class="fc-header-title">          <h2>Mai</h2>          </span>
+                                        <td class="fc-header-center"> <span class="fc-header-title h2">Mai</span>
                                         </td>
 
                                     </tr>
                                 </tbody>
                             </table>
                             <div class="fc-content" style="position: relative; min-height: 1px;">
-                                <div class="fc-view fc-view-month fc-grid" style="position: relative; min-height: 1px;" unselectable="on">
+                                <div class="fc-view fc-view-month fc-grid" style="position: relative; min-height: 1px;">
 
-                                    <table class="fc-border-separate" style="width:100%" cellspacing="0">
+                                    <table class="fc-border-separate" style="width:100%">
                                         <thead>
                                             <tr class="fc-first fc-last">
                                                 <th class="fc-day-header fc-sun fc-widget-header" style="width: 158px;">Lun</th>
@@ -612,12 +612,6 @@
 
 
 
-
-
-
-
-
-
       <!-- FOOTER @@@@@@@@@@@@@@@@@@@@@@@@@@@@///@@@@@@@@//@@@@@//@@@@/@-->
 
       <footer class="container-fluid" id="footer">
@@ -629,7 +623,7 @@
           <!-- COACH 1 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="../img/coach1.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach1.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Alexandra</h4>
                       <div class="meta">
@@ -640,8 +634,8 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 2h/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                      <small>Voir les disponibilités</small>
+                      <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
                   </div>
               </div>
           </div>
@@ -650,7 +644,7 @@
           <!-- COACH 2 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="../img/coach2.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach2.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Roberto</h4>
                       <div class="meta">
@@ -661,8 +655,8 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 2h/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <small>Voir les disponibilités</small>
                   </div>
               </div>
           </div>
@@ -672,7 +666,7 @@
           <!-- COACH 3 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="../img/coach3.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach3.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Ahsan</h4>
                       <div class="meta">
@@ -683,8 +677,8 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 1h/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <small>Voir les disponibilités</small>
                   </div>
               </div>
           </div>
@@ -694,23 +688,24 @@
           <!-- COACH 4 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="../img/coach4.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach4.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Tawshif</h4>
                       <div class="meta">
-                          <a>22ans</a>
+                          <a>32ans</a>
                       </div>
                       <div class="card-text">
                           Expert en <br>amincissement
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 1h30/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <small>Voir les disponibilités</small>
                   </div>
               </div>
           </div>
 
+        </div>
 
       </footer>
 
