--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Fitness & U</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- icon -->
         <script src="https://use.fontawesome.com/4d141429f4.js"></script>
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="icon" href="img/logo.png">
         <!-- Place favicon.ico in the root directory -->
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -50,7 +50,7 @@
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-10" href="#">Fitness U</a>
+            <a class="navbar-brand col-10" href="#">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse" id="nav-content">
@@ -79,7 +79,7 @@
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand col-md-8" href="#">Fitness U</a>
+            <a class="navbar-brand col-md-8" href="#">Fitness & U</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse col-md-3 nav" id="nav-content">
@@ -155,7 +155,7 @@
           <h2>Pésentation</h2>
           <blockquote class="blockquote">
             <p>
-            Besoin d'aide pour atteindre vos objectifs ? Offrez-vous les services de Fitness & U, un coach sportif professionnel qui propose ses services en salle ou à domicile proche de Lille.<br>                                                            
+            Besoin d'aide pour atteindre vos objectifs ? Offrez-vous les services de Fitness & U, un coach sportif professionnel qui propose ses services en salle ou à domicile proche de Lille.<br>
             Intervenant aussi bien sur le plan physique que mental, les coach sportif à domicile qualifié de Fitness & U peuvent également donner d'excellents conseils nutritionnels. Il est en mesure de vous aider à perdre du poids et à tonifier vos muscles.
             </p>
           </blockquote>
@@ -167,7 +167,7 @@
                         <!-- ARTICLE 1 -->
                         <div class="col-md-4">
                             <div class="card">
-                                <img class="card-img-top" src="img/desktop/art1.jpg">
+                                <img class="card-img-top" alt="coach" src="img/desktop/art1.jpg">
                                 <div class="card-block">
                                     <h4 class="card-title">STEP 1</h4>
                                     <div class="meta">
@@ -187,7 +187,7 @@
                         <!-- ARTICLE 2 -->
                         <div class="col-md-4">
                             <div class="card">
-                                <img class="card-img-top" src="img/desktop/art2.jpg">
+                                <img class="card-img-top" alt="coach" src="img/desktop/art2.jpg">
                                 <div class="card-block">
                                     <h4 class="card-title">STEP 2</h4>
                                     <div class="meta">
@@ -206,7 +206,7 @@
                         <!-- ARTICLE 3 -->
                         <div class="col-md-4">
                             <div class="card">
-                                <img class="card-img-top" src="img/desktop/art3.jpg">
+                                <img class="card-img-top" alt="coach" src="img/desktop/art3.jpg">
                                 <div class="card-block">
                                     <h4 class="card-title">STEP 3</h4>
                                     <div class="meta">
@@ -243,7 +243,7 @@
           <!-- COACH 1 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="img/coach1.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach1.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Alexandra</h4>
                       <div class="meta">
@@ -254,8 +254,8 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 2h/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                      <small>Voir les disponibilités</small>
+                      <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
                   </div>
               </div>
           </div>
@@ -264,7 +264,7 @@
           <!-- COACH 2 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="img/coach2.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach2.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Roberto</h4>
                       <div class="meta">
@@ -275,8 +275,8 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 2h/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <small>Voir les disponibilités</small>
                   </div>
               </div>
           </div>
@@ -286,7 +286,7 @@
           <!-- COACH 3 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="img/coach3.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach3.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Ahsan</h4>
                       <div class="meta">
@@ -297,8 +297,8 @@
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 1h/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <small>Voir les disponibilités</small>
                   </div>
               </div>
           </div>
@@ -308,23 +308,24 @@
           <!-- COACH 4 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" src="img/coach4.jpg">
+                  <img class="card-img-top" alt="coach" src="img/coach4.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Tawshif</h4>
                       <div class="meta">
-                          <a>22ans</a>
+                          <a>32ans</a>
                       </div>
                       <div class="card-text">
                           Expert en <br>amincissement
                       </div>
                   </div>
                   <div class="card-footer">
-                      <small>Min 1h30/semaine</small>
-                      <button class="btn btn-secondary float-right btn-sm" ><a href="#">Choisir</a></button>
+                    <a class="btn btn-secondary float-right btn-sm" href="pages/tarif.html">Choisir</a>
+                    <small>Voir les disponibilités</small>
                   </div>
               </div>
           </div>
 
+        </div>
 
       </footer>
 
