--- a/pages/tarif.html
+++ b/pages/tarif.html
@@ -104,7 +104,7 @@
 
 
         <!-- Tarifs  @@@///@@@@@@@@//@@@@@//@@@@/@-->
-        <section>
+        <section class="container">
 
           <h2>Tarifs</h2>
 
@@ -623,7 +623,7 @@
           <!-- COACH 1 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" alt="coach" src="img/coach1.jpg">
+                  <img class="card-img-top" alt="coach" src="../img/coach1.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Alexandra</h4>
                       <div class="meta">
@@ -644,7 +644,7 @@
           <!-- COACH 2 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" alt="coach" src="img/coach2.jpg">
+                  <img class="card-img-top" alt="coach" src="../img/coach2.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Roberto</h4>
                       <div class="meta">
@@ -666,7 +666,7 @@
           <!-- COACH 3 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" alt="coach" src="img/coach3.jpg">
+                  <img class="card-img-top" alt="coach" src="../img/coach3.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Ahsan</h4>
                       <div class="meta">
@@ -688,7 +688,7 @@
           <!-- COACH 4 -->
           <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
               <div class="card">
-                  <img class="card-img-top" alt="coach" src="img/coach4.jpg">
+                  <img class="card-img-top" alt="coach" src="../img/coach4.jpg">
                   <div class="card-block">
                       <h4 class="card-title mt-3">Tawshif</h4>
                       <div class="meta">
