--- a/pages/tarif.html
+++ b/pages/tarif.html
@@ -9,7 +9,7 @@
         <!-- icon -->
         <script src="https://use.fontawesome.com/4d141429f4.js"></script>
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="icon" href="../img/logo.png">        
         <!-- Place favicon.ico in the root directory -->
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
